Fix slider vertical alignment.

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -215,13 +215,12 @@ $resizable-threshold: $space-xs;
 // --------------------------------------------------
 
 $slider-width:            154px;
-$slider-height:           $toolbar-height;
+$slider-height:           $line-height-large;
 $slider-track-height:     $space-min;
 $slider-handle-size:      $space-sm;
 $slider-value-transition: 0.3s ease;
 
 $slider-width-sm:       104px;
-$slider-height-sm:      $line-height-large;
 $slider-handle-size-sm: 10px;
 
 
