--- a/src/stylesheets/components/_esper.scss
+++ b/src/stylesheets/components/_esper.scss
@@ -88,6 +88,10 @@
     }
   }
 
+  .slider {
+    height: $toolbar-height;
+  }
+
   .slider-track {
     background: $esper-slider-track-bg;
   }
